# TheDollarTracker

the-dollar-tracker-application/: README.md
the-dollar-tracker-application/code/: CMakeLists.txt
the-dollar-tracker-application/code/data/: ids.txt  jobs.txt  mg_ids.txt  schedule.txt
the-dollar-tracker-application/code/docs/: README.txt
the-dollar-tracker-application/code/src/: main.cpp
the-dollar-tracker-application/code/src/core/: FileGateway.cpp  FileGateway.h  Paths.cpp  Paths.h  Payroll.cpp  Payroll.h  Validation.cpp  Validation.h
the-dollar-tracker-application/code/src/core/src/core/: Validation.cpp
the-dollar-tracker-application/code/src/ui/: EmployeeWindow.cpp  EmployeeWindow.h  EmployeeWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ManagerWindow.cpp  ManagerWindow.h  ManagerWindow.ui  addname.cpp  addname.h  addname.ui  assignjob.cpp  assignjob.h  assignjob.ui  dialog.cpp  dialog.h  dialog.ui  dialog2.cpp  dialog2.h  dialog2.ui  jobadd.cpp  jobadd.h  jobadd.ui  jobremove.cpp  jobremove.h  jobremove.ui  jobsview.cpp  jobsview.h  jobsview.ui  payview.cpp  payview.h  payview.ui  removename.cpp  removename.h  removename.ui  schdule.cpp  schdule.h  schdule.ui  viewpaystub.cpp  (+5 more)
the-dollar-tracker-application/code/tests/: CMakeLists.txt  test_dummy.cpp  test_filegateway_mock.cpp  test_filegateway_mock.h  test_payroll.cpp  test_payroll.h  test_validation.cpp  test_validation.h
